Very messy gull AI, needs tidying (a lot)